--- a/sass/layouts-studiy/_promo.scss
+++ b/sass/layouts-studiy/_promo.scss
@@ -1,5 +1,10 @@
 /* --------------PROMO ------------*/
+
 .promo {
+  @media screen and (max-width: 1199px) {
+    display: none;
+  }
+
   padding-bottom: 94px;
 }
 .container {
