--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -2,6 +2,17 @@ body {
   max-width: 1600px;
   font-family: "Roboto", sans-serif;
 }
+
+/*@media screen and (min-width: 480px) {
+  body {
+    max-width: 480px;
+  }
+}
+@media screen and (min-width: 980px) {
+  body {
+    max-width: 980px;
+  }
+}*/
 .list {
   list-style: none;
 }
@@ -14,4 +25,3 @@ body {
 .footer-address {
   font-style: normal;
 }
-
