--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,8 @@
 @import "./utils/vars";
 @import "./base/reset";
+@import "./utils/mixins";
 @import "./base/common";
+
 @import "./utils/hidden";
 @import "./components/container";
 @import "./layouts-studiy/header";
