--- a/sass/layouts-studiy/_header.scss
+++ b/sass/layouts-studiy/_header.scss
@@ -138,9 +138,12 @@
   border: 0px;
   padding: 0px;
   outline: 2px solid orange;
-  fill: #2196f3;
+  fill: #212121;
   @include tablet {
     display: none;
+  }
+  &:hover {
+    fill: #2196f3;
   }
 }
 
