--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,5 +1,5 @@
 .container {
-  width: 100; /*1200px;*/
+  width: 100%; /*1200px;*/
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
@@ -14,8 +14,8 @@
   }
   @include desktop {
     width: 1200px;
+    outline: 2px solid green;
   }
-  outline: 2px solid green;
 }
 /*@media screen and (min-width: 480px) {
   .container {
