ADD header menu

--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -2,6 +2,7 @@
 :root {
   --main-text-color: #212121;
   --second-text-color: #757575;
+  --second-s-text-color: #2196f3;
   --main-btn-color: #ffffff;
   --second-btn-color: #2196f3;
   --accent-color: #2196f3;
