--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@
 :root {
   --main-text-color: #212121;
   --second-text-color: #757575;
+  --second-s-text-color: #2196f3;
   --main-btn-color: #ffffff;
   --second-btn-color: #2196f3;
   --accent-color: #2196f3;
@@ -91,12 +92,11 @@ body {
 }
 
 .container {
-  width: 100; /*1200px;*/
+  width: 100%; /*1200px;*/
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
-  outline: 2px solid green;
 }
 @media screen and (min-width: 480px) {
   .container {
@@ -113,6 +113,7 @@ body {
 @media screen and (min-width: 1200px) {
   .container {
     width: 1200px;
+    outline: 2px solid green;
   }
 }
 
@@ -271,6 +272,8 @@ body {
 }
 
 .header-menu-open {
+  width: 40px;
+  height: 40px;
   background-color: #ffffff;
   border: 0px;
   padding: 0px;
@@ -287,12 +290,68 @@ body {
 }
 
 .mobile__menu {
-  display: block;
+  padding: 10px 10px 48px 40px;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 796px;
+  background-color: #ffffff;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
 }
 @media screen and (min-width: 768px) {
   .mobile__menu {
     display: none;
   }
+}
+
+/*
+.mobile-menu-box {
+  padding-top: 10px;
+  padding-left: 40px;
+  padding-bottom: 48px;
+}*/
+.header-menu-close {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  width: 40px;
+  height: 40px;
+  border: 0px;
+  /*padding: 0px;*/
+  outline: 2px solid orange;
+  background-color: #ffffff;
+  fill: #212121;
+  /* @include tablet {
+    display: none;
+  }*/
+}
+.header-menu-close:hover {
+  fill: #2196f3;
+}
+
+.menu-list-link-tel {
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: var(--second-s-text-color);
+}
+
+.menu-list-link-mail {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: var(--second-text-color);
+}
+
+.menu-soc-link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22px;
+  letter-spacing: 0.02em;
+  color: #2196f3;
 }
 
 /* --------------SLOGAN ------------*/
