--- a/sass/layouts-studiy/_header.scss
+++ b/sass/layouts-studiy/_header.scss
@@ -134,6 +134,8 @@
   /*outline: 2px solid red;*/
 }
 .header-menu-open {
+  width: 40px;
+  height: 40px;
   background-color: #ffffff;
   border: 0px;
   padding: 0px;
@@ -148,9 +150,65 @@
 }
 
 .mobile__menu {
-  display: block;
+  padding: 10px 10px 48px 40px;
 
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 796px;
+  background-color: #ffffff;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08),
+    0px 1px 3px rgba(0, 0, 0, 0.16);
   @include tablet {
     display: none;
   }
+}
+/*
+.mobile-menu-box {
+  padding-top: 10px;
+  padding-left: 40px;
+  padding-bottom: 48px;
+}*/
+.header-menu-close {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  width: 40px;
+  height: 40px;
+
+  border: 0px;
+  /*padding: 0px;*/
+  outline: 2px solid orange;
+  background-color: #ffffff;
+
+  fill: #212121;
+  /* @include tablet {
+    display: none;
+  }*/
+  &:hover {
+    fill: #2196f3;
+  }
+}
+
+.menu-list-link-tel {
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: var(--second-s-text-color);
+}
+.menu-list-link-mail {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: var(--second-text-color);
+}
+.menu-soc-link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22px;
+  letter-spacing: 0.02em;
+  color: #2196f3;
 }
