--- a/css/main.css
+++ b/css/main.css
@@ -98,6 +98,14 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
+@media screen and (min-width: 320px) {
+  .container {
+    width: 320px;
+    outline: 2px solid yellow;
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+}
 @media screen and (min-width: 480px) {
   .container {
     width: 480px;
@@ -117,17 +125,6 @@ body {
   }
 }
 
-/*@media screen and (min-width: 480px) {
-  .container {
-    width: 480px;
-  }
-}
-@media screen and (min-width: 980px) {
-  .container {
-    width: 480px;
-  }
-}
-*/
 /* --------------HEADER ------------*/
 .header {
   background-color: white;
@@ -165,6 +162,11 @@ body {
 @media screen and (max-width: 768px) {
   .header-nav__header-link-log {
     margin-right: 276px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .header-nav__header-link-log {
+    margin-right: 100%;
   }
 }
 
@@ -290,8 +292,8 @@ body {
 }
 
 .mobile__menu {
-  padding: 10px 10px 48px 40px;
   position: absolute;
+  padding: 10px 10px 48px 40px;
   top: 0px;
   left: 0px;
   width: 100%;
@@ -305,12 +307,11 @@ body {
   }
 }
 
-/*
 .mobile-menu-box {
-  padding-top: 10px;
-  padding-left: 40px;
-  padding-bottom: 48px;
-}*/
+  width: 100%;
+  height: 100%;
+}
+
 .header-menu-close {
   position: absolute;
   top: 0px;
@@ -328,6 +329,22 @@ body {
 }
 .header-menu-close:hover {
   fill: #2196f3;
+}
+
+.menu-nav {
+  width: 100%;
+}
+
+.menu-list {
+  display: block;
+}
+
+.menu-list__link {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.18px;
+  letter-spacing: 0.02em;
+  color: var(--main-text-color);
 }
 
 .menu-list-link-tel {
