--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -4,6 +4,12 @@
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
+  @include mobile-dn {
+    width: 320px;
+    outline: 2px solid yellow;
+    padding-left: 0px;
+    padding-right: 0px;
+  }
   @include mobile {
     width: 480px;
     outline: 2px solid red;
@@ -17,14 +23,3 @@
     outline: 2px solid green;
   }
 }
-/*@media screen and (min-width: 480px) {
-  .container {
-    width: 480px;
-  }
-}
-@media screen and (min-width: 980px) {
-  .container {
-    width: 480px;
-  }
-}
-*/
