--- a/sass/layouts-studiy/_header.scss
+++ b/sass/layouts-studiy/_header.scss
@@ -28,6 +28,9 @@
   @include no-mobile {
     margin-right: 276px;
   }
+  @include dn-mobile {
+    margin-right: 100%;
+  }
 }
 .header-link-log {
   transition-duration: var(--animation-time);
@@ -133,6 +136,7 @@
   fill: currentColor;
   /*outline: 2px solid red;*/
 }
+
 .header-menu-open {
   width: 40px;
   height: 40px;
@@ -150,9 +154,8 @@
 }
 
 .mobile__menu {
-  padding: 10px 10px 48px 40px;
-
   position: absolute;
+  padding: 10px 10px 48px 40px;
   top: 0px;
   left: 0px;
   width: 100%;
@@ -164,12 +167,11 @@
     display: none;
   }
 }
-/*
+
 .mobile-menu-box {
-  padding-top: 10px;
-  padding-left: 40px;
-  padding-bottom: 48px;
-}*/
+  width: 100%;
+  height: 100%;
+}
 .header-menu-close {
   position: absolute;
   top: 0px;
@@ -189,6 +191,19 @@
   &:hover {
     fill: #2196f3;
   }
+}
+.menu-nav {
+  width: 100%;
+}
+.menu-list {
+  display: block;
+}
+.menu-list__link {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.18px;
+  letter-spacing: 0.02em;
+  color: var(--main-text-color);
 }
 
 .menu-list-link-tel {
