--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -1,5 +1,15 @@
+@mixin mobile-dn {
+  @media screen and (min-width: 320px) {
+    @content;
+  }
+}
 @mixin mobile {
   @media screen and (min-width: 480px) {
+    @content;
+  }
+}
+@mixin dn-mobile {
+  @media screen and (max-width: 480px) {
     @content;
   }
 }
@@ -19,7 +29,6 @@
     @content;
   }
 }
-
 
 @mixin desktop {
   @media screen and (min-width: 1200px) {
