Corection menu mobil

--- a/css/main.css
+++ b/css/main.css
@@ -296,7 +296,9 @@ body {
 }
 
 .mobile-menu {
+  /*position: fixed;*/
   position: absolute;
+  z-index: 1;
   padding: 10px 10px 48px 40px;
   top: 0px;
   left: 0px;
@@ -304,6 +306,14 @@ body {
   height: 796px;
   background-color: #ffffff;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+  width: 100vw;
+  height: 100vh;
+}
+.mobile-menu > .container {
+  height: 100%;
+  /*display: flex;
+  flex-direction: column;
+  justify-content: space-between;*/
 }
 @media screen and (min-width: 768px) {
   .mobile-menu {
@@ -312,8 +322,17 @@ body {
 }
 
 .menu-nav {
-  display: block;
-  position: relative;
+  margin-top: 32px;
+  /* display: block;
+  position: relative;*/
+}
+
+/*.menu-nav {
+  width: 100%;
+}*/
+.mobile-menu__menu-list-com {
+  margin-bottom: 64px;
+  margin-top: 302px;
 }
 
 /*.mobile-menu-box {
@@ -339,16 +358,8 @@ body {
   fill: #2196f3;
 }
 
-.menu-nav {
-  width: 100%;
-}
-
-.menu-list__item {
-  display: block;
-}
-
 .menu-list__link {
-  display: block;
+  display: inline-block;
   padding-top: 20px;
   padding-bottom: 20px;
   font-weight: 500;
@@ -356,6 +367,13 @@ body {
   line-height: 0.99px;
   letter-spacing: 0.02em;
   color: var(--main-text-color);
+}
+.menu-list__link:hover {
+  color: var(--second-s-text-color);
+}
+
+.menu-list__link_activ {
+  color: var(--second-s-text-color);
 }
 
 .menu-list-link-tel {
@@ -386,8 +404,8 @@ body {
   color: #2196f3;
 }
 
-.soc-line {
-  border: 1px solid rgba(33, 33, 33, 0.2);
+.menu-soc-list__soc-line {
+  border-left: 2px solid rgba(33, 33, 33, 0.2);
   /* outline: 2px solid orange;*/
   margin-left: 10px;
   margin-right: 10px;
