--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -4,16 +4,17 @@
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
+ 
   @include mobile-dn {
-    width: 320px;
+    width: 320px;/*calc(100% - 30px); /*290px;*/*/
     outline: 2px solid yellow;
     padding-left: 0px;
     padding-right: 0px;
-   /* margin-left: 0;
-    margin-right: 0;*/
+    margin-left: 0;
+    margin-right: 0;
   }
-  @include mobile {
-    width: 480px;
+ @include mobile {
+    width: 480;/*calc(100% - 30px); /*430px;*/*/
     outline: 2px solid red;
   }
   @include tablet {
