--- a/sass/layouts-studiy/_header.scss
+++ b/sass/layouts-studiy/_header.scss
@@ -4,10 +4,19 @@
   padding-top: 24px;
   padding-bottom: 24px;
   border-bottom: 1px solid #ececec;
+  @include no-mobile {
+    padding: 10px 15px;
+    width: 100%;
+  }
 }
 .header__container {
+  display: block;
+  /*width: 100%;*/
   display: flex;
   align-items: center;
+  /* @include no-mobile {
+    margin: 0px;
+  }*/
 }
 .header-nav {
   display: flex;
@@ -160,7 +169,6 @@
   position: fixed;
   /* position: absolute;*/
   z-index: 1;
-
   top: 0px;
   left: 0px;
   width: 100%;
