--- a/css/main.css
+++ b/css/main.css
@@ -102,7 +102,7 @@ body {
 }
 @media screen and (min-width: 320px) {
   .container {
-    width: calc(100% - 30px); /*290px;*/
+    width: 320px; /*calc(100% - 30px); /*290px;*/
     outline: 2px solid yellow;
     padding-left: 0px;
     padding-right: 0px;
@@ -112,7 +112,7 @@ body {
 }
 @media screen and (min-width: 480px) {
   .container {
-    /* width: calc(100% - 30px); /*430px;*/
+    width: 480; /*calc(100% - 30px); /*430px;*/
     outline: 2px solid red;
   }
 }
@@ -144,6 +144,8 @@ body {
 }
 
 .header__container {
+  display: block;
+  /*width: 100%;*/
   display: flex;
   align-items: center;
   /* @include no-mobile {
