--- a/css/main.css
+++ b/css/main.css
@@ -99,21 +99,19 @@ body {
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
+  /* @include mobile {
+    width: 480; /*calc(100% - 30px); /*430px;
+    outline: 2px solid red;
+  }*/
 }
 @media screen and (min-width: 320px) {
   .container {
-    width: 320px; /*calc(100% - 30px); /*290px;*/
+    /*width: calc(100% - 30px); /*calc(100% - 30px); /*290px;*/
     outline: 2px solid yellow;
-    padding-left: 0px;
-    padding-right: 0px;
-    margin-left: 0;
-    margin-right: 0;
-  }
-}
-@media screen and (min-width: 480px) {
-  .container {
-    width: 480; /*calc(100% - 30px); /*430px;*/
-    outline: 2px solid red;
+    /* padding-left: 0px;
+    padding-right: 0px;*/
+    /* margin-left: 0;
+    margin-right: 0;*/
   }
 }
 @media screen and (min-width: 768px) {
@@ -138,7 +136,8 @@ body {
 }
 @media screen and (max-width: 767px) {
   .header {
-    padding: 10px 15px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     width: 100%;
   }
 }
@@ -740,8 +739,10 @@ body {
   padding: 60px 0px;
 }
 
-.footer__container {
-  display: flex;
+@media screen and (min-width: 1200px) {
+  .footer__container {
+    display: flex;
+  }
 }
 
 .footer__left-part {
