--- a/sass/layouts-studiy/_header.scss
+++ b/sass/layouts-studiy/_header.scss
@@ -5,7 +5,8 @@
   padding-bottom: 24px;
   border-bottom: 1px solid #ececec;
   @include no-mobile {
-    padding: 10px 15px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     width: 100%;
   }
 }
