--- a/sass/layouts-studiy/_footer.scss
+++ b/sass/layouts-studiy/_footer.scss
@@ -10,7 +10,10 @@
   }
 }
 .footer__left-part {
-  margin-right: 70px;
+  margin-right: 0px;
+  @include tablet {
+    margin-right: 70px;
+  }
 }
 
 .footer-log {
@@ -35,7 +38,10 @@
   }
 }
 .footer__link-log {
-  margin-bottom: 20px;
+  margin-right: 0px;
+  @include desktop {
+    margin-bottom: 20px;
+  }
 }
 .footer-list__item:not(:last-child) {
   margin-bottom: 9px;
@@ -134,11 +140,13 @@
     text-transform: uppercase;
     color: var(--s-second-text-color);
     /*text-align: center;*/
-    margin-bottom: 12px;
+    margin-bottom: 20px;
   }
 
   &-box {
-    display: flex;
+    @include desktop {
+      display: flex;
+    }
   }
   &-input {
     transition-duration: var(--animation-time);
@@ -164,13 +172,18 @@
   }
 }
 .footer-form-label__mr {
-  margin-right: 12px;
+  margin-bottom: 20px;
+  margin-right: 0;
+  @include desktop {
+    margin-right: 12px;
+    margin-bottom: 0px;
+  }
 }
 
 .footer-icon-send {
   /* margin-left: 10px;
   margin-right: 28px;*/
-  
+
   display: flex;
   align-items: center;
 }
