--- a/css/main.css
+++ b/css/main.css
@@ -99,19 +99,11 @@ body {
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
-  /* @include mobile {
-    width: 480; /*calc(100% - 30px); /*430px;
-    outline: 2px solid red;
-  }*/
 }
 @media screen and (min-width: 320px) {
   .container {
     /*width: calc(100% - 30px); /*calc(100% - 30px); /*290px;*/
     outline: 2px solid yellow;
-    /* padding-left: 0px;
-    padding-right: 0px;*/
-    /* margin-left: 0;
-    margin-right: 0;*/
   }
 }
 @media screen and (min-width: 768px) {
@@ -742,12 +734,21 @@ body {
 @media screen and (min-width: 1200px) {
   .footer {
     text-align: start;
+    margin-left: 0;
+    margin-right: 0;
   }
 }
 
+.footer__container {
+  /* margin-left: 0;
+  margin-right: 0;*/
+  width: 100%;
+}
 @media screen and (min-width: 1200px) {
   .footer__container {
     display: flex;
+    /*margin-left: auto;
+    margin-right: auto;*/
   }
 }
 
@@ -762,7 +763,14 @@ body {
 }
 @media screen and (min-width: 768px) {
   .footer__left-part {
+    margin-right: auto;
+    margin-left: 61px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__left-part {
     margin-right: 70px;
+    margin-left: 0;
   }
 }
 
@@ -826,17 +834,22 @@ body {
 }
 
 .footer__footer-soc {
-  margin-right: 0px;
   justify-content: center;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
 }
+@media screen and (min-width: 768px) {
+  .footer__footer-soc {
+    margin-left: 0;
+    margin-right: 74px;
+    text-align: start;
+  }
+}
 @media screen and (min-width: 1200px) {
   .footer__footer-soc {
-    margin-bottom: 94px;
+    margin-right: 94px;
     margin-left: 0;
-    margin-right: 0;
     text-align: start;
   }
 }
