--- a/sass/layouts-studiy/_footer.scss
+++ b/sass/layouts-studiy/_footer.scss
@@ -7,11 +7,18 @@
 
   @include desktop {
     text-align: start;
+    margin-left: 0;
+    margin-right: 0;
   }
 }
 .footer__container {
+  /* margin-left: 0;
+  margin-right: 0;*/
+  width: 100%;
   @include desktop {
     display: flex;
+    /*margin-left: auto;
+    margin-right: auto;*/
   }
 }
 .footer-container-left-part-And-centr {
@@ -23,7 +30,13 @@
   margin-right: 0px;
 
   @include tablet {
+    margin-right: auto;
+    margin-left: 61px;
+  }
+
+  @include desktop {
     margin-right: 70px;
+    margin-left: 0;
   }
 }
 
@@ -90,15 +103,18 @@
   }
 }
 .footer__footer-soc {
-  margin-right: 0px;
   justify-content: center;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
-  @include desktop {
-    margin-bottom: 94px;
+  @include tablet {
     margin-left: 0;
-    margin-right: 0;
+    margin-right: 74px;
+    text-align: start;
+  }
+  @include desktop {
+    margin-right: 94px;
+    margin-left: 0;
     text-align: start;
   }
 }
