--- a/sass/layouts-studiy/_info.scss
+++ b/sass/layouts-studiy/_info.scss
@@ -2,7 +2,6 @@
 .info {
   background: #f5f4fa;
   padding: 94px 0;
-  
 }
 
 .info-title {
@@ -16,21 +15,32 @@
 }
 .info-list {
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 30px;
+  justify-content: center;
+
+  /*justify-content: space-between;*/
 }
 .info-item {
   text-align: center;
-  width: 270px;
+  /*width: 270px;*/
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   background: #ffffff;
+  width: 100%;
+  height: auto;
+  @include tablet {
+    width: calc((100% - 60px) / 2);
+  }
+  @include desktop {
+    width: calc((100% - 120px) / 4);
+  }
 }
 
 .info-img {
   display: block;
-  max-width: 100%;
-  height: auto;
+  /*max-width: 100%;*/
 }
 .info-name {
   font-weight: 500;
@@ -59,27 +69,24 @@
   padding-bottom: 30px;
 
   &-link {
-  transition-duration: var(--animation-time);
-  transition-property: fill, background-color;
-  transition-timing-function: var(--animation-function);
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  /*background-color: red;*/
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  fill: #afb1b8;
-  &:hover,
-&:focus {
-  fill: var(--main-accent-color);
-  background-color: var(--accent-color);
-}
-}
-/*.info-soc-icon {
+    transition-duration: var(--animation-time);
+    transition-property: fill, background-color;
+    transition-timing-function: var(--animation-function);
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+    /*background-color: red;*/
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    fill: #afb1b8;
+    &:hover,
+    &:focus {
+      fill: var(--main-accent-color);
+      background-color: var(--accent-color);
+    }
+  }
+  /*.info-soc-icon {
   outline: 2px solid black;
 } */
-
-
 }
-
