--- a/css/main.css
+++ b/css/main.css
@@ -496,24 +496,24 @@ body {
 .features {
   padding-top: 94px;
   padding-bottom: 94px;
+  /*&-item {
+    /display: block;
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
+    &:first-child {
+      margin-left: auto;
+    }
+    &:last-child {
+      margin-right: auto;
+    }
+  }*/
 }
 .features-list {
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
   justify-content: center;
-}
-.features-item {
-  display: block;
-}
-.features-item:not(:last-child) {
-  margin-right: 30px;
-}
-.features-item:first-child {
-  margin-left: auto;
-}
-.features-item:last-child {
-  margin-right: auto;
 }
 .features-icon {
   /* display: block;*/
@@ -1169,14 +1169,20 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1) rotate(0);
-  width: 528px;
-  height: 581px;
+  width: 450px;
+  height: 609px;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   padding: 40px;
   transition: transform var(--animation-time) var(--animation-function), min-height var(--animation-time) var(--animation-function);
   /*transition: transform 500ms linear, min-height 500ms linear;*/
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    height: 581px;
+  }
 }
 .modal-close {
   position: absolute;
