--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -18,8 +18,13 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1) rotate(0);
-  width: 528px;
-  height: 581px;
+
+  width: 450px;
+  height: 609px;
+  @include desktop {
+    width: 528px;
+    height: 581px;
+  }
   background-color: #ffffff;
 
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
