--- a/css/main.css
+++ b/css/main.css
@@ -496,24 +496,41 @@ body {
 .features {
   padding-top: 94px;
   padding-bottom: 94px;
-  /*&-item {
-    /display: block;
-    &:not(:last-child) {
-      margin-right: 30px;
-    }
-    &:first-child {
-      margin-left: auto;
-    }
-    &:last-child {
-      margin-right: auto;
-    }
-  }*/
 }
 .features-list {
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
   justify-content: center;
+}
+.features-item {
+  width: 270px;
+  /*display: block;
+  &:not(:last-child) {
+    margin-right: 30px;
+  }
+  */
+}
+@media screen and (min-width: 480px) {
+  .features-item {
+    width: 450px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .features-item {
+    width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .features-item {
+    width: 270px;
+  }
+}
+.features-item:first-child {
+  margin-left: auto;
+}
+.features-item:last-child {
+  margin-right: auto;
 }
 .features-icon {
   /* display: block;*/
@@ -523,8 +540,8 @@ body {
   align-items: center;
   background: #f5f4fa;
   border-radius: 4px;
-  width: 270px;
   height: 120px;
+  width: 270px;
   /*outline: 2px solid rgb(190, 16, 16);*/
   margin-bottom: 30px;
 }
@@ -540,7 +557,7 @@ body {
 }
 @media screen and (min-width: 1200px) {
   .features-icon {
-    width: 270;
+    width: 270px;
   }
 }
 .features-title {
