--- a/sass/layouts-studiy/_features.scss
+++ b/sass/layouts-studiy/_features.scss
@@ -10,18 +10,31 @@
     justify-content: center;
   }
 
-  /*&-item {
-    /display: block;
+  &-item {
+    width: 270px;
+    @include mobile {
+      width: 450px;
+    }
+
+    @include tablet {
+      width: 354px;
+    }
+    @include desktop {
+      width: 270px;
+    }
+
+    /*display: block;
     &:not(:last-child) {
       margin-right: 30px;
     }
+    */
     &:first-child {
       margin-left: auto;
     }
     &:last-child {
       margin-right: auto;
     }
-  }*/
+  }
 
   &-icon {
     /* display: block;*/
@@ -31,8 +44,9 @@
     align-items: center;
     background: #f5f4fa;
     border-radius: 4px;
-    width: 270px;
     height: 120px;
+
+    width: 270px;
     @include mobile {
       width: 450px;
     }
@@ -41,7 +55,7 @@
       width: 354px;
     }
     @include desktop {
-      width: 270;
+      width: 270px;
     }
 
     /*outline: 2px solid rgb(190, 16, 16);*/
