--- a/css/main.css
+++ b/css/main.css
@@ -1186,14 +1186,20 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1) rotate(0);
-  width: 450px;
-  height: 609px;
+  width: auto;
+  height: auto;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   padding: 40px;
   transition: transform var(--animation-time) var(--animation-function), min-height var(--animation-time) var(--animation-function);
   /*transition: transform 500ms linear, min-height 500ms linear;*/
+}
+@media screen and (min-width: 480px) {
+  .modal {
+    width: 450px;
+    height: 609px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .modal {
