--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -19,8 +19,13 @@
   left: 50%;
   transform: translate(-50%, -50%) scale(1) rotate(0);
 
-  width: 450px;
-  height: 609px;
+  width: auto;
+  height: auto;
+
+  @include mobile {
+    width: 450px;
+    height: 609px;
+  }
   @include desktop {
     width: 528px;
     height: 581px;
