--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -24,7 +24,7 @@ address {
 img {
   display: block;
   /* no adapted image*/
-  width: 100%;
+  /*width: 100%;
   max-width: 100%;
-  height: auto;
+  height: auto;*/
 }
