--- a/css/main.css
+++ b/css/main.css
@@ -57,7 +57,8 @@ img {
   }
 }*/
 body {
-  max-width: 1600px;
+  /*max-width: 1600px;*/
+  width: 100%;
   font-family: "Roboto", sans-serif;
 }
 
@@ -685,7 +686,7 @@ body {
 
 .info-img {
   display: block;
-  /*max-width: 100%;*/
+  width: 100%;
 }
 
 .info-name {
@@ -1099,8 +1100,20 @@ body {
   gap: 30px;
 }
 .product-list__item {
-  width: 370px;
+  width: 100%;
+  height: auto;
+  /*width: 370px;*/
   /*outline: 2px solid red;*/
+}
+@media screen and (min-width: 768px) {
+  .product-list__item {
+    width: calc((100% - 60px) / 2);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .product-list__item {
+    width: calc((100% - 90px) / 3);
+  }
 }
 .product-list__link {
   text-decoration: none;
@@ -1118,7 +1131,7 @@ body {
 }
 .product-list__img {
   display: block;
-  max-width: 100%;
+  /*max-width: 100%;*/
   height: auto;
 }
 .product-list__text {
