--- a/css/main.css
+++ b/css/main.css
@@ -43,9 +43,9 @@ address {
 img {
   display: block;
   /* no adapted image*/
-  /*width: 100%;
+  width: 100%;
   max-width: 100%;
-  height: auto;*/
+  height: auto;
 }
 
 /*
