--- a/sass/layouts-portfolio/_filter.scss
+++ b/sass/layouts-portfolio/_filter.scss
@@ -1,14 +1,20 @@
 .filter {
-  padding: 94px 0px;
+  padding: 60px 0px;
 
   &__list {
     display: flex;
-    justify-content: center;
-    margin-bottom: 56px;
+    flex-wrap: wrap;
+    gap: 8px;
+    margin-bottom: 40px;
+
+    @include tablet {
+      margin-bottom: 30px;
+      justify-content: center;
+    }
   }
-  &__item:not(:last-child) {
-    margin-right: 9px;
-  }
+  /*&__item:not(:last-child) {
+    margin-right: 8px;
+  }*/
 
   &__btn {
     transition-duration: var(--animation-time);
