--- a/sass/layouts-studiy/_header.scss
+++ b/sass/layouts-studiy/_header.scss
@@ -182,7 +182,9 @@
   width: 100vw;
   height: 100vh;
 
-  > .container {
+  > .mobile-menu-box {
+    padding-left: 0px;
+    padding-right: 0px;
     height: 100%;
     width: 100%;
     /*display: flex;
@@ -262,6 +264,9 @@
 .menu-list-link-tel {
   font-weight: 500;
   font-size: 34px;
+  @include dn-mobile {
+    font-size: 24px;
+  }
   line-height: 1.18;
   letter-spacing: 0.02em;
   color: var(--second-s-text-color);
@@ -279,6 +284,9 @@
 .menu-soc-link {
   font-weight: 500;
   font-size: 18px;
+  @include dn-mobile {
+    font-size: 10px;
+  }
   line-height: 1.22px;
   letter-spacing: 0.02em;
   color: #2196f3;
