--- a/css/main.css
+++ b/css/main.css
@@ -43,9 +43,9 @@ address {
 img {
   display: block;
   /* no adapted image*/
-  /*width: 100%;
+  width: 100%;
   max-width: 100%;
-  height: auto;*/
+  height: auto;
 }
 
 /*
@@ -523,6 +523,12 @@ body {
     margin-right: 30px;
   }
   */
+  /*&:first-child {
+    margin-left: auto;
+  }
+  &:last-child {
+    margin-right: auto;
+  }*/
 }
 @media screen and (min-width: 480px) {
   .features-item {
@@ -538,12 +544,6 @@ body {
   .features-item {
     width: 270px;
   }
-}
-.features-item:first-child {
-  margin-left: auto;
-}
-.features-item:last-child {
-  margin-right: auto;
 }
 .features-icon {
   /* display: block;*/
@@ -581,6 +581,11 @@ body {
   text-transform: uppercase;
   color: var(--main-text-color);
   margin-bottom: 10px;
+}
+@media screen and (max-width: 767px) {
+  .features-title {
+    text-align: center;
+  }
 }
 .features-text {
   font-weight: 400;
@@ -1197,6 +1202,12 @@ body {
   /*width: 322px;*/
 }
 
+/*
+.product :first-child {
+  @include tablet {
+    padding-bottom: 56px;
+  }
+}*/
 /*---------------MODAL-WINDOW-------------------------------*/
 .backdrop {
   position: fixed;
@@ -1353,7 +1364,6 @@ body {
   transition-duration: var(--animation-time);
   transition-property: border;
   transition-timing-function: var(--animation-function);
-  width: 120px;
   padding: 12px 16px;
   width: 100%;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -1380,11 +1390,17 @@ body {
 
 .checbox-text {
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   color: var(--second-text-color);
   padding-left: 23px;
+}
+@media screen and (min-width: 1200px) {
+  .checbox-text {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 .checbox-text-color {
   padding-left: 4px;
@@ -1395,10 +1411,15 @@ body {
 
 .form-icon-checbox {
   position: absolute;
-  left: 14px;
-  /* outline: 2px solid red;*/
+  left: 0px;
+  outline: 2px solid red;
   box-shadow: none;
   z-index: 0;
+}
+@media screen and (min-width: 1200px) {
+  .form-icon-checbox {
+    left: 14px;
+  }
 }
 .form-icon-checbox-activ {
   transition-duration: var(--animation-time);
@@ -1406,11 +1427,16 @@ body {
   transition-timing-function: var(--animation-function);
   display: block;
   position: absolute;
-  left: 14px;
-  /*outline: 2px solid blue;*/
+  left: 0px;
+  outline: 2px solid blue;
   background-color: #fff;
   box-shadow: none;
   z-index: 0;
+}
+@media screen and (min-width: 1200px) {
+  .form-icon-checbox-activ {
+    left: 14px;
+  }
 }
 
 .modal-form-input-chb:checked + .form-icon-checbox {
