--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -162,13 +162,14 @@
   transition-property: border;
   transition-timing-function: var(--animation-function);
 
-  width: 120px;
   padding: 12px 16px;
   width: 100%;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
 
   font-weight: 400;
+
+  
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.01em;
@@ -192,8 +193,14 @@
 
 .checbox-text {
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.17;
+
+  @include desktop {
+    font-size: 14px;
+    line-height: 1.71;
+  }
+
   letter-spacing: 0.03em;
   color: var(--second-text-color);
 
@@ -209,9 +216,11 @@
 
 .form-icon-checbox {
   position: absolute;
-  left: 14px;
-
-  /* outline: 2px solid red;*/
+  left: 0px;
+  @include desktop {
+    left: 14px;
+  }
+  outline: 2px solid red;
   box-shadow: none;
   z-index: 0;
 
@@ -221,9 +230,12 @@
     transition-timing-function: var(--animation-function);
     display: block;
     position: absolute;
-    left: 14px;
 
-    /*outline: 2px solid blue;*/
+    left: 0px;
+    @include desktop {
+      left: 14px;
+    }
+    outline: 2px solid blue;
     background-color: #fff;
     box-shadow: none;
     z-index: 0;
