--- a/sass/layouts-studiy/_header.scss
+++ b/sass/layouts-studiy/_header.scss
@@ -153,7 +153,7 @@
   background-color: #ffffff;
   /*border: 0px;*/
   /*padding: 0px;*/
-  outline: 2px solid orange;
+  /*outline: 2px solid orange;*/
   fill: #212121;
   @include tablet {
     display: none;
@@ -217,22 +217,11 @@
 }
 
 .header-menu-close {
-  /* position: absolute;
-  top: 0px;
-  right: 0px;
-  transform: translateX(calc(0%));
-  width: 40px;
-  */
-
-  /*border: 0px;*/
   height: 40px;
-  outline: 2px solid orange;
+  /*outline: 2px solid orange;*/
   background-color: #ffffff;
-
   fill: #212121;
-  /* @include tablet {
-    display: none;
-  }*/
+
   &:hover {
     fill: #2196f3;
   }
@@ -241,9 +230,7 @@
   display: block;
   margin-left: auto;
 }
-/*
-.menu-list__item {
-}*/
+
 .menu-list__link {
   display: inline-block;
   padding-top: 20px;
