--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -5,17 +5,17 @@
   margin-left: auto;
   margin-right: auto;
 
-  @include mobile-dn {
+  /*@include mobile-dn {
     /*width: calc(100% - 30px); /*calc(100% - 30px); /*290px;*/
-    outline: 2px solid yellow;
-  }
+  /*  outline: 2px solid yellow;
+  }*/
 
   @include tablet {
     width: 768px;
-    outline: 2px solid blue;
+    /*outline: 2px solid blue;*/
   }
   @include desktop {
     width: 1200px;
-    outline: 2px solid green;
+    /*outline: 2px solid green;*/
   }
 }
