--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -169,7 +169,6 @@
 
   font-weight: 400;
 
-  
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.01em;
@@ -220,7 +219,7 @@
   @include desktop {
     left: 14px;
   }
-  outline: 2px solid red;
+  /*outline: 2px solid red;*/
   box-shadow: none;
   z-index: 0;
 
@@ -235,7 +234,7 @@
     @include desktop {
       left: 14px;
     }
-    outline: 2px solid blue;
+    /*outline: 2px solid blue;*/
     background-color: #fff;
     box-shadow: none;
     z-index: 0;
