--- a/css/main.css
+++ b/css/main.css
@@ -323,9 +323,9 @@ body {
   padding-right: 0px;
   height: 100%;
   width: 100%;
-  /*display: flex;
+  display: flex;
   flex-direction: column;
-  justify-content: space-between;*/
+  /* justify-content: space-between;*/
 }
 @media screen and (min-width: 768px) {
   .mobile-menu {
@@ -348,7 +348,7 @@ body {
 }
 
 .mobile-menu__menu-list-com {
-  margin-top: 302px;
+  margin-top: auto; /*302px;*/
   margin-bottom: 64px;
 }
 
@@ -437,33 +437,73 @@ body {
 }*/
 /* --------------SLOGAN ------------*/
 .slogan {
-  /*display: block;
-  width: 100%;*/
-  background-color: #c4c4c4;
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/FonSlogan.jpg);
-  padding-top: 200px;
-  padding-bottom: 200px;
+  /*display: block;*/
+  max-width: 100%;
+  /*background-color: #c4c4c4;*/
+  background: rgba(47, 48, 58, 0.4);
+  /* background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/mobile/slogan-img.jpg);*/
+  /* background-image: url(../images/tablet/slogan-tab-img.jpg);*/
+  background-image: url(../images/mobile/slogan-img.jpg);
+  padding-top: 118px;
+  padding-bottom: 118px;
   background-repeat: no-repeat;
-  /*padding: 200px 455px 210px 455px;*/
+}
+@media screen and (min-width: 480px) {
+  .slogan {
+    /*background-image: url(../images/mobile/slogan-img.jpg);*/
+    background-image: url(../images/tablet/slogan-tab-img.jpg);
+  }
+}
+@media screen and (min-width: 768px) {
+  .slogan {
+    /* background-image: url(../images/tablet/slogan-tab-img.jpg);*/
+    background-image: url(../images/desktop/slogan-desktop-img.jpg);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .slogan {
+    background-image: url(../images/desktop/slogan-desktop-img.jpg);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .slogan {
+    padding-top: 200px;
+    padding-bottom: 200px;
+  }
 }
 
 .slogan-text {
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 26px;
+  line-height: 1.62;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   text-align: center;
   color: #ffffff;
-  max-width: 626px;
+  max-width: 360px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 30px;
+}
+@media screen and (min-width: 1200px) {
+  .slogan-text {
+    font-size: 44px;
+    line-height: 1.36;
+  }
 }
 @media screen and (max-width: 1200px) {
   .slogan-text {
     font-size: 26px;
     line-height: 1.62;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .slogan-text {
+    max-width: 696px;
   }
 }
 
@@ -479,10 +519,15 @@ body {
   color: var(--main-btn-color);
   display: block;
   margin: 0 auto;
-  width: 216px;
+  width: 200px;
   height: 50px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+}
+@media screen and (min-width: 1200px) {
+  .slogan-btn {
+    width: 216px;
+  }
 }
 .slogan-btn:hover {
   /*background: #b808fa;*/
@@ -492,8 +537,14 @@ body {
 
 /* --------------FEATURES ------------*/
 .features {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .features {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 .features-list {
   display: flex;
@@ -650,12 +701,18 @@ body {
 
 .info-title {
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.7;
+  font-size: 28px;
+  line-height: 1.8;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--main-text-color);
   margin-bottom: 50px;
+}
+@media screen and (min-width: 1200px) {
+  .info-title {
+    font-size: 36px;
+    line-height: 1.7;
+  }
 }
 
 .info-list {
@@ -742,16 +799,27 @@ body {
 /* --------------CLIENTS ------------*/
 .clients {
   background: #ffffff; /*#f5f5f5;*/
-  padding: 94px 0 94px 0;
+  padding: 60px 0 60px 0;
+}
+@media screen and (min-width: 1200px) {
+  .clients {
+    padding: 94px 0 94px 0;
+  }
 }
 .clients-title {
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.7;
+  font-size: 28px;
+  line-height: 1.8;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--main-text-color);
   margin-bottom: 50px;
+}
+@media screen and (min-width: 1200px) {
+  .clients-title {
+    font-size: 36px;
+    line-height: 1.7;
+  }
 }
 .clients-list {
   display: flex;
@@ -914,8 +982,15 @@ body {
 
 .footer-soc {
   display: block;
-  max-width: 206px;
-  padding-top: 12px;
+  /*max-width: 206px;*/
+  padding-top: 0px;
+  margin-top: 60px;
+}
+@media screen and (min-width: 768px) {
+  .footer-soc {
+    margin-top: 0px;
+    padding-top: 12px;
+  }
 }
 .footer-soc__text {
   font-style: normal;
@@ -954,7 +1029,14 @@ body {
 
 .footer-form {
   /* max-width: 570px;*/
-  padding-top: 12px;
+  padding-top: 0px;
+  margin-top: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .footer-form {
+    padding-top: 12px;
+    margin-top: 0px;
+  }
 }
 .footer-form__title {
   /*font-style: normal;*/
