--- a/sass/layouts-studiy/_clients.scss
+++ b/sass/layouts-studiy/_clients.scss
@@ -1,12 +1,21 @@
 /* --------------CLIENTS ------------*/
 .clients {
   background: #ffffff; /*#f5f5f5;*/
-  padding: 94px 0 94px 0;
+
+  padding: 60px 0 60px 0;
+  @include desktop {
+    padding: 94px 0 94px 0;
+  }
 
   &-title {
     font-weight: 700;
-    font-size: 36px;
-    line-height: 1.7;
+    font-size: 28px;
+    line-height: 1.8;
+    @include desktop {
+      font-size: 36px;
+      line-height: 1.7;
+    }
+
     text-align: center;
     letter-spacing: 0.03em;
     color: var(--main-text-color);
