--- a/sass/layouts-studiy/_features.scss
+++ b/sass/layouts-studiy/_features.scss
@@ -1,7 +1,11 @@
 /* --------------FEATURES ------------*/
 .features {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  @include desktop {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 
   &-list {
     display: flex;
