--- a/sass/layouts-studiy/_header.scss
+++ b/sass/layouts-studiy/_header.scss
@@ -187,9 +187,9 @@
     padding-right: 0px;
     height: 100%;
     width: 100%;
-    /*display: flex;
+    display: flex;
     flex-direction: column;
-    justify-content: space-between;*/
+    /* justify-content: space-between;*/
   }
 
   @include tablet {
@@ -212,7 +212,7 @@
 }
 
 .mobile-menu__menu-list-com {
-  margin-top: 302px;
+  margin-top: auto; /*302px;*/
   margin-bottom: 64px;
 }
 
