--- a/sass/layouts-studiy/_info.scss
+++ b/sass/layouts-studiy/_info.scss
@@ -6,8 +6,13 @@
 
 .info-title {
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.7;
+  font-size: 28px;
+  line-height: 1.8;
+  @include desktop {
+    font-size: 36px;
+    line-height: 1.7;
+  }
+
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--main-text-color);
