--- a/sass/layouts-studiy/_slogan.scss
+++ b/sass/layouts-studiy/_slogan.scss
@@ -1,22 +1,47 @@
 /* --------------SLOGAN ------------*/
 .slogan {
-  /*display: block;
-  width: 100%;*/
-  background-color: #c4c4c4;
-  background-image: linear-gradient(
+  /*display: block;*/
+  max-width: 100%;
+  /*background-color: #c4c4c4;*/
+  background: rgba(47, 48, 58, 0.4);
+
+  /* background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(../images/FonSlogan.jpg);
-  padding-top: 200px;
-  padding-bottom: 200px;
+    url(../images/mobile/slogan-img.jpg);*/
+
+  /* background-image: url(../images/tablet/slogan-tab-img.jpg);*/
+  background-image: url(../images/mobile/slogan-img.jpg);
+  @include mobile {
+    /*background-image: url(../images/mobile/slogan-img.jpg);*/
+    background-image: url(../images/tablet/slogan-tab-img.jpg);
+  }
+  @include tablet {
+    /* background-image: url(../images/tablet/slogan-tab-img.jpg);*/
+    background-image: url(../images/desktop/slogan-desktop-img.jpg);
+  }
+  @include desktop {
+    background-image: url(../images/desktop/slogan-desktop-img.jpg);
+  }
+
+  padding-top: 118px;
+  padding-bottom: 118px;
+  @include desktop {
+    padding-top: 200px;
+    padding-bottom: 200px;
+  }
   background-repeat: no-repeat;
-  /*padding: 200px 455px 210px 455px;*/
 }
 .slogan-text {
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 26px;
+  line-height: 1.62;
+  @include desktop {
+    font-size: 44px;
+    line-height: 1.36;
+  }
+
   letter-spacing: 0.06em;
   text-transform: uppercase;
   @include no-tablet {
@@ -25,7 +50,10 @@
   }
   text-align: center;
   color: #ffffff;
-  max-width: 626px;
+  max-width: 360px;
+  @include desktop {
+    max-width: 696px;
+  }
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 30px;
@@ -44,8 +72,12 @@
 
   display: block;
   margin: 0 auto;
-  width: 216px;
+  width: 200px;
   height: 50px;
+
+  @include desktop {
+    width: 216px;
+  }
 
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
