--- a/sass/layouts-portfolio/_product.scss
+++ b/sass/layouts-portfolio/_product.scss
@@ -6,6 +6,9 @@
   border-left: 1px solid #eeeeee;
   border-right: 1px solid #eeeeee;
   border-bottom: 1px solid #eeeeee;
+  @include tablet-desktop {
+    flex-grow: 2;
+  }
 
   &-list {
     display: flex;
@@ -29,6 +32,12 @@
       transition-duration: var(--animation-time);
       transition-property: box-shadow;
       transition-timing-function: var(--animation-function);
+      @include tablet-desktop {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+      }
+
       &:hover,
       &:focus {
         display: inline-block;
