--- a/sass/layouts-studiy/_clients.scss
+++ b/sass/layouts-studiy/_clients.scss
@@ -33,9 +33,14 @@
     transition-duration: var(--animation-time);
     transition-property: fill, border-color;
     transition-timing-function: var(--animation-function);
-
-    width: 170px;
+    width: 210px;
     height: 92px;
+    @include tablet {
+      width: 226px;
+    }
+    @include desktop {
+      width: 170px;
+    }
 
     border: 1px solid #afb1b8;
 
