--- a/sass/layouts-studiy/_footer.scss
+++ b/sass/layouts-studiy/_footer.scss
@@ -7,8 +7,8 @@
 
   @include desktop {
     text-align: start;
-    margin-left: 0;
-    margin-right: 0;
+    /*margin-left: 0;
+    margin-right: 0;*/
   }
 }
 .footer__container {
@@ -17,26 +17,25 @@
   width: 100%;
   @include desktop {
     display: flex;
-    /*margin-left: auto;
-    margin-right: auto;*/
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 .footer-container-left-part-And-centr {
   @include tablet {
     display: flex;
+    align-items: baseline;
   }
 }
 .footer__left-part {
-  margin-right: 0px;
-
+  margin-left: auto;
+  margin-right: auto;
   @include tablet {
-    margin-right: auto;
     margin-left: 61px;
   }
 
   @include desktop {
     margin-right: 70px;
-    margin-left: 0;
   }
 }
 
@@ -110,7 +109,7 @@
   @include tablet {
     margin-left: 0;
     margin-right: 74px;
-    text-align: start;
+    /*text-align: start;*/
   }
   @include desktop {
     margin-right: 94px;
@@ -202,8 +201,15 @@
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
     width: 358px;
+
     @include dn-mobile {
       width: 100%;
+    }
+    @include tablet {
+      width: 450px;
+    }
+    @include desktop {
+      width: 358px;
     }
     height: 50px;
     background-color: #2f303a;
