--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -18,6 +18,11 @@
     @content;
   }
 }
+@mixin tablet-desktop{
+   @media screen and (min-width: 768px) and (max-width: 1199px) {
+  @content;
+}
+}
 
 @mixin  tablet{
   @media screen and (min-width: 768px) {
